[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-chain"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "DL", email = "your.email@example.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic==2.11.*",
]

[project.optional-dependencies]
dev = [
    "black",
]
test = [
    "python-dotenv",
    "boto3",
    "boto3-stubs",
    "langchain-aws",
    "langchain-logseq @ git+https://github.com/DavidLiuGit/Langchain-Logseq.git",
]

[tool.setuptools]
packages = ["chat_chain"]

[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true